# OpenEnv-Hackathon-LDU-Marketplace-Sim

./: .gitignore  Dockerfile  JUDGES_KICKSTART.md  ONE_PAGE_REFERENCE.md  README.md  TEAM_DOCUMENTATION.md  main.py  openenv.yaml  pyproject.toml
artifacts_smoke2/: ablation_comparison.md  ablation_metrics.csv  baseline_metrics.csv  policy_comparison.csv  policy_comparison.md  policy_pairwise_deltas.csv  policy_win_rates.md  resilience_stress_benchmark.md
artifacts_smoke4/: ablation_comparison.md  ablation_metrics.csv  baseline_metrics.csv  policy_comparison.csv  policy_comparison.md  policy_pairwise_deltas.csv  policy_win_rates.md  resilience_stress_benchmark.md
smartgrid_mas/: __init__.py  demo_page.py  env.py  generate_demo_artifacts.py  models.py  tasks.py  train_baseline.py
smartgrid_mas/engine/: __init__.py  control.py  dynamics.py  ldu.py  market.py  policies.py  reward.py
tests/: test_api_contract.py  test_market_and_ldu.py  test_reward_and_determinism.py
training/: Colab_Unsloth_HF_TRL_Training.ipynb  minimal_train.py
